--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "build-and-start-storybook": "build-storybook && npm run storybook",
+    "clean-storybook": "rm -rf storybook-static",
     "test": "jest --env=jsdom --testPathIgnorePatterns test-utils.tsx cypress setupEnv.ts TemplateName.*",
     "test:watch": "jest --watch --env=jsdom --testPathIgnorePatterns   test-utils.tsx cypress setupEnv.ts TemplateName.*",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "format": "prettier --write '**/*.{ts,tsx,scss,css,json}'",
+    "analyze": "npm run build && source-map-explorer .next/static/chunks/*.js",
+    "clean-next": "rm -rf .next",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:clean": "rm -rf cypress",
+    "prepare": "husky install",
+    "isready": "prettier --write 'src/components/**/*.{ts,tsx,scss,css,json}' && next lint && jest --env=jsdom --testPathIgnorePatterns test-utils.tsx cypress setupEnv.ts && next build && source-map-explorer .next/static/**/*.js"
   },
   "dependencies": {
     "@svgr/webpack": "5.5.0",
     "consola": "^2.15.3",
-    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-mozjpeg": "9.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^10.0.1",
+    "imagemin-svgo": "9.0.0",
     "immer": "^9.0.12",
     "next": "12.1.0",
     "next-compose-plugins": "^2.2.1",
@@ -49,10 +59,12 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-loader": "^8.2.3",
+    "cypress": "^9.5.2",
     "eslint": "8.11.0",
     "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.2",
     "eslint-plugin-jest-dom": "^4.0.1",
