--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
+      "~/*": ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "__mocks__/fileMock.js"],
